<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context="com.example.android.a4_glorious_quiz.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="400dp"
                android:scaleType="centerCrop"
                android:src="@drawable/eddie_portrait" />
        </LinearLayout>

        <!-- Start -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/start_title"
                android:textAllCaps="true"
                android:textSize="36sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/start_subtitle"
                android:textSize="@dimen/question_title_textSize" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/start_description"
                android:textSize="@dimen/question_desc_textSize" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/eddie_1" />
        </LinearLayout>

        <!-- Introduction -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBgrd1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/question_title_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intro_title" />

            <TextView
                style="@style/question_desc_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intro_question" />

            <EditText
                android:id="@+id/myName"
                style="@style/edit_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/intro_hint"
                android:imeOptions="actionDone" />

            <TextView
                style="@style/question_title_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intro_final" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:imeOptions="actionDone"
                android:scaleType="centerCrop"
                android:src="@drawable/eddie_2" />
        </LinearLayout>

        <!-- question 1 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorLight"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/question_title_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_title" />

            <TextView
                style="@style/question_desc_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_desc" />

            <EditText
                android:id="@+id/herName"
                style="@style/edit_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/q1_hint" />

        </LinearLayout>

        <!-- question 2 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBgrd1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/question_title_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2_title" />

            <TextView
                style="@style/question_desc_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/q2_desc"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/q2check_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/answer2_poetry" />

                    <CheckBox
                        android:id="@+id/q2check_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer2_publicSpeeches" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/q2check_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center_vertical"
                        android:text="@string/answer2_sandwiches" />

                    <CheckBox
                        android:id="@+id/q2check_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer2_all" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/dinos" />
        </LinearLayout>

        <!-- question 3 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorLight"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/question_title_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q3_title" />

            <TextView
                style="@style/question_desc_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q3_desc"
                android:textSize="16sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/q3radio_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/answer3_humor" />

                <RadioButton
                    android:id="@+id/q3radio_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/answer3_inscrutable" />

                <RadioButton
                    android:id="@+id/q3radio_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/answer3_noGod" />
            </RadioGroup>

        </LinearLayout>

        <!-- question 4 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBgrd1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/question_title_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q4_title" />

            <TextView
                style="@style/question_desc_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q4_desc" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/q4check_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/answer4_swim" />

                    <CheckBox
                        android:id="@+id/q4check_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer4_run" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/q4check_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center_vertical"
                        android:text="@string/answer4_fly" />

                    <CheckBox
                        android:id="@+id/q4check_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer4_float" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/julius" />
        </LinearLayout>

        <!-- question 5 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorLight"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/question_title_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q5_title" />

            <TextView
                style="@style/question_desc_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q5_desc" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/q5radio_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/answer5_emperor" />

                <RadioButton
                    android:id="@+id/q5radio_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/answer5_salad" />

                <RadioButton
                    android:id="@+id/q5radio_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/answer5_brute" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="resetApp"
                android:text="@string/button_text_restart" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:onClick="submitAnswers"
                android:text="@string/button_text_submit"
                android:textColor="@color/colorLight" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>