<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:gravity="center"
            android:text="@string/winner_text45_title"
            android:textColor="@color/colorLight"
            android:textSize="28dp" />

        <TextView
            android:id="@+id/winner_scoreview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="0"
            android:textColor="@color/colorLight"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/winner_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:text="@string/winner_text45"
            android:textColor="@color/colorLight"
            android:textSize="18dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="8dp"
            android:scaleType="centerInside"
            android:src="@drawable/popup_45" />

        <Button
            android:id="@+id/dismiss"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="@color/colorLight"
            android:text="@string/button_text_tryAgain"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>

</LinearLayout>